*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1255,7 +1255,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
 
 === Amerikaanske neet-unafhankelike gebeden ===
-De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewoande eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine ofgelegen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewoande eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
+De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgelegen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1273,9 +1273,9 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |[[Pago Pago]]
 |[[Engels]]k: American Samoa <br /> [[Samoaans]]: Amerika Sāmoa
 |-
-|[[Bakereiland]]
+|[[Baker]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand>Disse gebeden binnen unbewoand ofgeseen van enkele militären en weatenskappers.</ref>
+|(Unbewund)<ref name=Unbewund>Disse gebeden binnen unbewund afgeseen van enkele militären en weatenskappers.</ref>
 |[[Engels]]k<ref name=defacto />: Baker Island
 |-
 |[[Guam]]
@@ -1285,22 +1285,22 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |-
 |[[Howland (eiland)|Howland]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Howland Island
 |-
 |[[Jarvis (eiland)|Jarvis]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Jarvis Island
 |-
 |[[Johnston (atol)|Johnston]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Johnston Atoll
 |-
 |[[Kingman (rif)|Kingman]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Kingman Reef
 |-
 |[[Midway (eiland)|Midway]]
@@ -1310,7 +1310,7 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |-
 |[[Navassa]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Navassa Island
 |-
 |[[Noordelike Marianen]]
@@ -1320,7 +1320,7 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |-
 |[[Palmyra (atol)|Palmyra]]
 |[[Ingelyvd territorium|Ungeorganiseerd ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k: Palmyra Atoll
 |-
 |[[Puerto Rico]]
@@ -1330,7 +1330,7 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |-
 |[[Wake (eiland)|Wake]]
 |[[Neet-ingelyvd territorium|Ungeorganiseerd neet-ingelyvd territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Wake Island
 |}
 
@@ -1345,12 +1345,12 @@ Australie hevt söäven eksterne territoria. Disse territoria wörden döär de 
 |-
 |[[Ashmore- en Cartiereilanden]]
 |Ekstern territorium
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Ashmore and Cartier Islands
 |-
 |[[Heard en McDonaldeilanden]]
 |Ekstern territorium
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Heard Island and McDonald Islands
 |-
 |[[Karsteiland]]
@@ -1365,7 +1365,7 @@ Australie hevt söäven eksterne territoria. Disse territoria wörden döär de 
 |-
 |[[Koraalsey-eilanden]]
 |Ekstern territorium
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: Coral Sea Islands
 |-
 |[[Norfolk]]
@@ -1400,7 +1400,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |-
 |[[Britsk Indisk Oceaanterritorium]]
 |[[Britske oaverseyske gebeden|Oaverseysk gebeed]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Engels]]k<ref name=defacto />: British Indian Ocean Territory
 |-
 |[[Britske Maagdeneilanden]]
@@ -1458,7 +1458,7 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Cockburn Town]]
 |[[Engels]]k: Turks and Caicos Islands
 |-
-|[[Süüdgeorgie en de südelike Sandwicheilanden]]<ref name=Unbewoand />
+|[[Süüdgeorgie en de südelike Sandwicheilanden]]<ref name=Unbewund />
 |[[Britske oaverseyske gebeden|Oaverseysk gebeed]]
 |[[King Edward Point]]
 |[[Engels]]k<ref name=defacto />: South Georgia and the South Sandwich Islands
@@ -1530,12 +1530,12 @@ Alle [[franske oaverseyske gebeden]] maken integraal underdeyl uut van Frankryk<
 |-
 |[[Clipperton]]
 |[[Franske oaverseyske gebeden|Oaverseyske besitting]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Frans]]k: Île Clipperton
 |-
 |[[Franske Südelike en Antarktiske Gebeden]]
 |[[Franske oaverseyske gebeden|Oaverseysk territorium]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Frans]]k: Terres australes et antarctiques françaises
 |-
 |[[Fransk-Guyana]]
@@ -1670,10 +1670,10 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 |-
 |[[Bouveteilaand|Bouveteiland]]
 |[[Ofhankelik gebeed]]
-|(Unbewoand)<ref name=Unbewoand />
+|(Unbewund)<ref name=Unbewund />
 |[[Noors]]k: Bouvetøya
 |-
-|[[Jan Mayen]]<ref name=Unbewoand />
+|[[Jan Mayen]]<ref name=Unbewund />
 |Underdeyl van de provincy [[Nordland (provincy)|Nordland]]
 |[[Olonkinbyen]]
 |[[Noors]]k: Jan Mayen
