*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -1255,7 +1255,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
 
 === Amerikaanske neet-unafhankelike gebeden ===
-De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgelegen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
+De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgeleagen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
